--- a/club_cms/.env
+++ b/club_cms/.env
@@ -4,9 +4,10 @@ APP_KEY=base64:+8EAl7BIRVYdsS3Ipna5GBjP1mzkPw4zeexrx7yUT5w=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=es
 APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_FAKER_LOCALE=es_ES
+APP_TIMEZONE=Europe/Madrid
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
