--- a/club_cms/.env
+++ b/club_cms/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:+8EAl7BIRVYdsS3Ipna5GBjP1mzkPw4zeexrx7yUT5w=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://matiasborra.es/club
 
 APP_LOCALE=es
 APP_FALLBACK_LOCALE=en
